--- a/DeadPool.Infrastructure/DeadPool.Infrastructure.csproj
+++ b/DeadPool.Infrastructure/DeadPool.Infrastructure.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Interfaces\ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEvent.cs" />
-    <Compile Include="TestMonitor.cs" />
+    <Compile Include="TestEvaluator.cs" />
     <Compile Include="TestResult.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
