--- a/DeadPool.Mvc4/DeadPool.Mvc4.csproj
+++ b/DeadPool.Mvc4/DeadPool.Mvc4.csproj
@@ -143,6 +143,7 @@
     <Compile Include="App_Start\DeadPoolConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\DeadPoolTestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -163,8 +164,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DeadPool.Infrastructure\DeadPool.Infrastructure.csproj">
+      <Project>{98632570-ae02-4b4d-8aeb-d4c6ba6d9b81}</Project>
+      <Name>DeadPool.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
