--- a/DeadPool.Mvc4/Web.config
+++ b/DeadPool.Mvc4/Web.config
@@ -11,6 +11,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=srv-dbdev01\oltp,1633;Initial Catalog=BuildingBlocks;Integrated Security=True;MultipleActiveResultSets=True;Application Name=BuildingBlock_SMS_Web;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
