--- a/DeadPool.Infrastructure/DeadPool.Infrastructure.csproj
+++ b/DeadPool.Infrastructure/DeadPool.Infrastructure.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,11 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeadPoolService.cs" />
+    <Compile Include="Enums\EventType.cs" />
     <Compile Include="Interfaces\ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEvent.cs" />
     <Compile Include="TestEvaluator.cs" />
     <Compile Include="TestResult.cs" />
+    <Compile Include="Tests\DatabaseTest.cs" />
+    <Compile Include="Interfaces\ITestContext.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
