--- a/src/Sentinel/Sentinel.csproj
+++ b/src/Sentinel/Sentinel.csproj
@@ -33,13 +33,45 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.0\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Autofac.Integration.WebApi, Version=3.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.WebApi2.3.4.0\lib\net45\Autofac.Integration.WebApi.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FluentScheduler, Version=3.1.46.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentScheduler.3.1.46\lib\net40\FluentScheduler.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.Owin, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Owin.5.2.3\lib\net45\System.Web.Http.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,23 +80,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\JobState.cs" />
-    <Compile Include="Interfaces\INotifier.cs" />
-    <Compile Include="Interfaces\ISentinelService.cs" />
-    <Compile Include="Interfaces\ITestResultStore.cs" />
+    <Compile Include="Api\Controllers\SentinelController.cs" />
+    <Compile Include="Api\Filters\NoCacheAttribute.cs" />
+    <Compile Include="Core\Enums\EventType.cs" />
+    <Compile Include="Core\Enums\JobState.cs" />
+    <Compile Include="Core\Interfaces\ISentinelService.cs" />
+    <Compile Include="Core\Interfaces\ITest.cs" />
+    <Compile Include="Core\Interfaces\ITestResultStore.cs" />
+    <Compile Include="Core\SentinelInitializer.cs" />
+    <Compile Include="Core\SentinelService.cs" />
+    <Compile Include="Core\SentinelTestBase.cs" />
+    <Compile Include="Core\Stores\InMemoryTestResultStore.cs" />
+    <Compile Include="Core\TestResult.cs" />
+    <Compile Include="Middleware\AutofacConfiguration.cs" />
+    <Compile Include="Middleware\Extensions\OwinExtensions.cs" />
+    <Compile Include="Middleware\Extensions\SentinelAppBuilderExtensions.cs" />
+    <Compile Include="Middleware\SentinelOptions.cs" />
+    <Compile Include="Middleware\WebApiConfig.cs" />
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="Result\TestResult.cs" />
-    <Compile Include="SentinelInitializer.cs" />
-    <Compile Include="SentinelService.cs" />
-    <Compile Include="Enums\EventType.cs" />
-    <Compile Include="Interfaces\ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SentinelTestBase.cs" />
-    <Compile Include="Stores\InMemoryTestResultStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
