--- a/src/Sentinel.Mvc4.Sample/Sentinel.Mvc4.Sample.csproj
+++ b/src/Sentinel.Mvc4.Sample/Sentinel.Mvc4.Sample.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sentinel.Mvc4</RootNamespace>
-    <AssemblyName>Sentinel.Mvc4</AssemblyName>
+    <RootNamespace>Sentinel.Mvc4.Sample</RootNamespace>
+    <AssemblyName>Sentinel.Mvc4.Sample</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
