--- a/src/Sentinel/Sentinel.csproj
+++ b/src/Sentinel/Sentinel.csproj
@@ -22,6 +22,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,8 +43,8 @@
       <HintPath>..\packages\Autofac.WebApi2.3.4.0\lib\net45\Autofac.Integration.WebApi.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FluentScheduler, Version=3.1.46.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentScheduler.3.1.46\lib\net40\FluentScheduler.dll</HintPath>
+    <Reference Include="FluentScheduler, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b76503528a14ebd1, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentScheduler.4.0.0\lib\net40\FluentScheduler.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -84,10 +86,10 @@
     <Compile Include="Api\Filters\NoCacheAttribute.cs" />
     <Compile Include="Core\Enums\EventType.cs" />
     <Compile Include="Core\Enums\JobState.cs" />
-    <Compile Include="Core\Interfaces\ISentinelService.cs" />
-    <Compile Include="Core\Interfaces\ITest.cs" />
-    <Compile Include="Core\Interfaces\ITestResultStore.cs" />
+    <Compile Include="Core\ISentinelService.cs" />
+    <Compile Include="Core\ITest.cs" />
     <Compile Include="Core\ITestResult.cs" />
+    <Compile Include="Core\ITestResultStore.cs" />
     <Compile Include="Core\SentinelInitializer.cs" />
     <Compile Include="Core\SentinelService.cs" />
     <Compile Include="Core\SentinelTestBase.cs" />
